# hired_labs_webtools

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
config/: .settings.py.swp  settings.py  urls.py
docs/: citations.txt
resume_tailor/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
resume_tailor/migrations/: 0001_initial.py  0002_participant.py  0003_rename_participant_profile.py  0004_consentrtion_degree_organization_position_skill_and_more.py  0005_rename_consentrtion_consentration.py  0006_organization_loc.py  0007_education_user_experience_user.py  0008_rename_consentration_concentration_and_more.py  0009_alter_resumeupload_user.py  0010_alter_resumeupload_user.py
resume_tailor/scripts/: resume_parser.py
resume_tailor/templates/resume_tailor/: base.html  index.html
static/output/janton42/: janton42_labeled_data.csv  janton42_numeric_only.csv  janton42_out.csv  janton42_resume.txt  janton42_working_data.csv
static/output/test_byord_civ/: test_byord_civ_labeled_data.csv  test_byord_civ_numeric_only.csv  test_byord_civ_out.csv  test_byord_civ_resume.txt  test_byord_civ_working_data.csv
static/scripts/: resume_parser.py
static/styles/: style.css
templates/: about.html  base.html  contact.html  hired_labs_home.html  login.html  logout.html  parsed.html  profile.html  profile_update.html  register.html  resume_tailor_home.html  resume_upload.html  settings.html
uploads/: Brandy-ATS-Resume-March-2022_-_Brandy_Johnson-Yordy.rtf
